--- a/.npmrc
+++ b/.npmrc
@@ -1,15 +1,9 @@
-# Platform configuration
-optional=false
-
-# Use npm cache
-cache-min=86400
-
-# Don't install dev dependencies in production
-production=false
-
-# Platform-specific package resolution
-engine-strict=true
+# Root .npmrc - No workspace configuration
+# Each subproject (Backend, Frontend-app) has its own .npmrc
 
 # Exclude problematic packages
 fund=false
 audit=false
+
+# Disable workspace warnings
+legacy-peer-deps=false
