--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -36,7 +36,6 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
-    "fs-extra": "^11.3.2",
     "lucide-react-native": "^0.460.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -75,34 +74,28 @@
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "@types/prop-types": "^15.7.15",
-    "@types/react": "18.2.0",
+    "@types/react": "~18.2.0",
     "@types/scheduler": "^0.26.0",
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
     "babel-preset-expo": "~54.0.0",
-    "metro-cache": "^0.81.5",
     "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
   },
   "engines": {
-    "node": ">=20.18.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "overrides": {
-    "@rollup/rollup-linux-x64-gnu": "npm:rollup",
-    "@rollup/rollup-linux-x64-musl": "npm:rollup",
-    "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup",
-    "@react-native/gradle-plugin": "0.76.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@types/react": "18.2.0"
+    "@types/react": "~18.2.0"
   },
   "resolutions": {
-    "@react-native/gradle-plugin": "0.76.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@types/react": "18.2.0"
+    "@types/react": "~18.2.0"
   },
   "expo": {
     "install": {
