--- a/package.json
+++ b/package.json
@@ -1,48 +1,20 @@
 {
   "name": "mathematico-platform",
   "version": "1.0.0",
-  "description": "Mathematico Learning Platform - Unified Monorepo (Backend + Frontend)",
+  "description": "Mathematico Learning Platform - Backend + Frontend (No Workspace)",
   "private": true,
   "scripts": {
-    "dev": "npm run dev:backend",
-    "dev:backend": "npm run dev --workspace=Backend",
-    "dev:mobile": "npm run start --workspace=Frontend-app",
-    "install:all": "npm install --workspaces",
-    "build:android": "npm run build:android --workspace=Frontend-app",
-    "build:android-preview": "npm run build:android-preview --workspace=Frontend-app",
-    "build:ios": "npm run build:ios --workspace=Frontend-app",
-    "submit:android": "npm run submit:android --workspace=Frontend-app",
-    "submit:ios": "npm run submit:ios --workspace=Frontend-app",
-    "clean": "rd /s /q node_modules && rd /s /q Backend\\node_modules && rd /s /q Frontend-app\\node_modules && del package-lock.json"
+    "dev:backend": "cd Backend && npm run dev",
+    "dev:mobile": "cd Frontend-app && npx expo start --clear",
+    "start:backend": "cd Backend && npm start",
+    "start:mobile": "cd Frontend-app && npx expo start",
+    "install:backend": "cd Backend && npm install",
+    "install:mobile": "cd Frontend-app && npm install",
+    "install:all": "npm run install:backend && npm run install:mobile"
   },
-  "workspaces": [
-    "Backend",
-    "Frontend-app"
-  ],
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
-  },
-  "overrides": {
-    "@rollup/rollup-linux-x64-gnu": "npm:rollup",
-    "@rollup/rollup-linux-x64-musl": "npm:rollup",
-    "@rollup/rollup-darwin-x64": "npm:rollup",
-    "@rollup/rollup-darwin-arm64": "npm:rollup",
-    "@react-native/gradle-plugin": "0.76.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@types/react": "19.1.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.23.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.19.22",
-    "@types/testing-library__jest-dom": "^5.14.9",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
-    "typescript": "^5.9.3"
   },
   "keywords": [
     "mathematico",
@@ -51,7 +23,6 @@
     "express",
     "backend",
     "mobile",
-    "monorepo",
     "learning"
   ],
   "author": "Mathematico Team",
