--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -49,7 +49,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
     "react-refresh": "^0.14.2"
   },
   "devDependencies": {
@@ -74,7 +74,7 @@
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "@types/prop-types": "^15.7.15",
-    "@types/react": "~18.2.0",
+    "@types/react": "~19.1.10",
     "@types/scheduler": "^0.26.0",
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
@@ -86,16 +86,6 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
-  },
-  "overrides": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@types/react": "~18.2.0"
-  },
-  "resolutions": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@types/react": "~18.2.0"
   },
   "expo": {
     "install": {
