fix: npmrc and package.json and types and tsconfig.json

--- a/Backend/.npmrc
+++ b/Backend/.npmrc
@@ -17,3 +17,6 @@ engine-strict=true
 # Exclude problematic packages
 fund=false
 audit=false
+
+# Disable peer dependency warnings
+legacy-peer-deps=false
