--- a/Frontend-app/.npmrc
+++ b/Frontend-app/.npmrc
@@ -1,4 +1,5 @@
-# Enable legacy peer deps to handle React/React Native version conflicts
+# Frontend-app .npmrc - Expo SDK 54 configuration
+# Enable legacy peer deps for React Native compatibility
 legacy-peer-deps=true
 
 # Disable engine checks to prevent version conflicts
@@ -6,3 +7,6 @@ engine-strict=false
 
 # Configure npm to use the latest features
 prefer-offline=true
+
+# Disable funding messages
+fund=false
