--- a/Frontend-app/tsconfig.json
+++ b/Frontend-app/tsconfig.json
@@ -32,11 +32,11 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.js",
-    "**/*.jsx"
+    "**/*.jsx",
+    "types.d.ts"
   ],
   "exclude": [
     "node_modules",
     "**/__tests__/*"
-  ],
-  "extends": "expo/tsconfig.base"
+  ]
 }
