--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/native": "^7.1.3",
