--- a/Frontend-app/app.json
+++ b/Frontend-app/app.json
@@ -7,6 +7,7 @@
     "owner": "testaccount125",
     "icon": "./assets/icon.png",
     "newArchEnabled": false,
+    "sdkVersion": "54.0.0",
     "web": {
       "favicon": "./assets/favicon.png"
     },
@@ -25,7 +26,11 @@
       "permissions": []
     },
     "plugins": [
-      "expo-secure-store"
-    ]
+      "expo-secure-store",
+      "expo-dev-client"
+    ],
+    "developmentClient": {
+      "silentLaunch": true
+    }
   }
 }
