--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "scripts": {
     "start": "expo start",
-    "dev": "expo start --clear",
+    "dev": "expo start --dev-client --clear",
+    "dev:go": "expo start --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build:dev": "eas build --platform android --profile development",
     "build:android": "eas build --platform android --profile production",
     "build:android-preview": "eas build --platform android --profile preview",
     "build:ios": "eas build --platform ios --profile production",
