fix: authController.js and auth.js

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "install:mobile": "cd Frontend-app && npm install",
     "install:all": "npm run install:backend && npm run install:mobile",
     "clean:all": "cd Backend && rm -rf node_modules package-lock.json && cd ../Frontend-app && rm -rf node_modules package-lock.json .expo",
-    "reset:all": "npm run clean:all && npm run install:all"
+    "reset:all": "npm run clean:all && npm run install:all",
+    "test:backend": "node test-backend.js",
+    "deploy": "vercel --prod --confirm",
+    "deploy:dev": "vercel --confirm"
   },
   "engines": {
     "node": ">=18.0.0",
