--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
     {
       "src": "Backend/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -18,9 +15,5 @@
       "memory": 1024,
       "maxDuration": 30
     }
-  },
-  "env": {
-    "NODE_ENV": "production",
-    "VERCEL": "1"
   }
 }
