update: package.json and tsconfig.json

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean:all": "cd Backend && rm -rf node_modules package-lock.json && cd ../Frontend-app && rm -rf node_modules package-lock.json .expo",
     "reset:all": "npm run clean:all && npm run install:all",
     "test:backend": "node test-backend.js",
-    "deploy": "vercel --prod --confirm",
-    "deploy:dev": "vercel --confirm"
+    "deploy": "npx vercel --prod --confirm",
+    "deploy:dev": "npx vercel --confirm"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -31,5 +31,8 @@
     "learning"
   ],
   "author": "Mathematico Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "vercel": "^48.5.0"
+  }
 }
