--- a/Frontend-app/tsconfig.json
+++ b/Frontend-app/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "Node16",
     "lib": [
       "es2020",
       "dom",
@@ -13,7 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node16",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -33,11 +32,11 @@
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "types.d.ts"
+    "types.d.ts",
+    "src/types/**/*"
   ],
   "exclude": [
     "node_modules",
     "**/__tests__/*"
-  ],
-  "extends": "expo/tsconfig.base"
+  ]
 }
