--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "install:mobile": "cd Frontend-app && npm install",
     "install:all": "npm run install:backend && npm run install:mobile",
     "clean:all": "cd Backend && rm -rf node_modules package-lock.json && cd ../Frontend-app && rm -rf node_modules package-lock.json .expo",
-    "reset:all": "npm run clean:all && npm run install:all",
-    "test:backend": "node test-backend.js",
-    "deploy": "npx vercel --prod --yes --name mathematico-backend",
-    "deploy:dev": "npx vercel --yes --name mathematico-backend",
-    "deploy:script": "chmod +x deploy-vercel.sh && ./deploy-vercel.sh"
+    "reset:all": "npm run clean:all && npm run install:all"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -32,8 +28,5 @@
     "learning"
   ],
   "author": "Mathematico Team",
-  "license": "MIT",
-  "devDependencies": {
-    "vercel": "^48.5.0"
-  }
+  "license": "MIT"
 }
