fix: serverless deployment

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "start": "node index.js",
     "dev": "npx nodemon index.js",
-    "vercel-build": "echo 'Build complete'",
-    "postinstall": "echo 'Dependencies installed'",
+    "build": "echo 'Build complete - no build step required for serverless'",
+    "vercel-build": "echo 'Vercel build complete'",
+    "postinstall": "echo 'Dependencies installed successfully'",
     "export-docs": "node scripts/export-swagger.js",
-    "test-api": "node -e \"const app = require('./index.js'); console.log('✅ API loads successfully');\""
+    "test-api": "node -e \"const app = require('./index.js'); console.log('✅ API loads successfully');\"",
+    "deploy": "vercel --prod",
+    "deploy:preview": "vercel",
+    "logs": "vercel logs",
+    "dev:serverless": "vercel dev"
   },
   "dependencies": {
     "axios": "^1.7.7",
