--- a/package.json
+++ b/package.json
@@ -12,14 +12,7 @@
     "install:mobile": "cd Frontend-app && npm install",
     "install:all": "npm run install:backend && npm run install:mobile",
     "clean:all": "cd Backend && rm -rf node_modules package-lock.json && cd ../Frontend-app && rm -rf node_modules package-lock.json .expo",
-    "reset:all": "npm run clean:all && npm run install:all",
-    "vercel-build": "cd Backend && npm run vercel-build",
-    "deploy:serverless": "vercel --prod",
-    "deploy:preview": "vercel",
-    "deploy:logs": "vercel logs",
-    "setup:env": "node setup-env.js",
-    "deploy:windows": "deploy.bat",
-    "deploy:linux": "./deploy.sh"
+    "reset:all": "npm run clean:all && npm run install:all"
   },
   "engines": {
     "node": ">=18.0.0",
