--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "cd Backend && npm install",
+  "outputDirectory": null,
   "builds": [
     {
       "src": "Backend/index.js",
