--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy:serverless": "vercel --prod",
     "deploy:preview": "vercel",
     "deploy:logs": "vercel logs",
-    "setup:env": "node setup-env.js"
+    "setup:env": "node setup-env.js",
+    "vercel-build": "echo 'No build step required for serverless function'"
   },
   "engines": {
     "node": ">=18.0.0",
