--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,8 +8,7 @@
     "dev": "npx nodemon index.js",
     "vercel-build": "echo 'Build complete'",
     "postinstall": "echo 'Dependencies installed'",
-    "export-docs": "node scripts/export-swagger.js",
-    "test-api": "node -e \"const app = require('./index.js'); console.log('✅ API loads successfully');\""
+    "export-docs": "node scripts/export-swagger.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
