--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -46,6 +46,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.1.0",
