--- a/Frontend-app/eas.json
+++ b/Frontend-app/eas.json
@@ -7,18 +7,21 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "workflow": "bare",
       "android": {
         "buildType": "apk"
       }
     },
     "preview": {
       "distribution": "internal",
+      "workflow": "bare",
       "android": {
         "buildType": "app-bundle"
       }
     },
     "production": {
       "distribution": "store",
+      "workflow": "bare",
       "node": "20.18.3",
       "android": {
         "buildType": "app-bundle"
