--- a/.gitignore
+++ b/.gitignore
@@ -218,12 +218,16 @@ Frontend-app/.env*.local
 Frontend-app/*.tsbuildinfo
 
 # Android (Frontend-app - managed by Expo)
-Frontend-app/android/
 Frontend-app/android/app/build/
 Frontend-app/android/build/
 Frontend-app/android/.gradle/
 Frontend-app/android/local.properties
 Frontend-app/android/app/release/
+# Allow gradlew files
+!Frontend-app/android/gradlew
+!Frontend-app/android/gradlew.bat
+!Frontend-app/android/gradle/
+!Frontend-app/android/gradle/**
 
 # iOS (Frontend-app)
 Frontend-app/ios/build/
