--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -18,8 +18,8 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/native": "^7.1.3",
@@ -27,8 +27,8 @@
     "@react-navigation/stack": "^7.1.3",
     "axios": "^1.7.7",
     "expo": "~54.0.0",
-    "expo-constants": "~18.0.1",
-    "expo-dev-client": "~6.0.15",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
@@ -104,6 +104,13 @@
         "react-native-screens",
         "react-native-safe-area-context"
       ]
+    },
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-razorpay"
+        ]
+      }
     }
   }
 }
