--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.1.3",
     "axios": "^1.7.7",
-    "expo": "~51.0.0",
+    "expo": "^54.0.20",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-document-picker": "~12.0.2",
@@ -76,8 +76,11 @@
     "@types/istanbul-reports": "^3.0.4",
     "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
+    "@types/node": "^24.9.1",
     "@types/prop-types": "^15.7.15",
     "@types/react": "~19.1.10",
+    "@types/react-dom": "^19.2.2",
+    "@types/react-native": "^0.72.8",
     "@types/scheduler": "^0.26.0",
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
