--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "dev": "expo start --dev-client --clear",
     "dev:go": "expo start --clear",
     "android": "expo run:android",
@@ -41,7 +41,7 @@
     "lucide-react-native": "^0.460.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.15",
+    "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
