update the code

--- a/Frontend-app/tsconfig.json
+++ b/Frontend-app/tsconfig.json
@@ -33,7 +33,8 @@
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "types.d.ts"
+    "types.d.ts",
+    "react-types.d.ts"
   ],
   "exclude": [
     "node_modules",
