--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -19,24 +19,24 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/native-stack": "^7.3.1",
     "@react-navigation/stack": "^7.1.3",
     "axios": "^1.7.7",
     "expo": "^54.0.20",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-document-picker": "~12.0.2",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
+    "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.17",
-    "expo-font": "~12.0.10",
-    "expo-image-picker": "~15.1.0",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.28",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "lucide-react-native": "^0.400.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -50,8 +50,8 @@
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-refresh": "^0.14.2"
   },
   "devDependencies": {
@@ -78,8 +78,7 @@
     "@types/node": "^24.9.1",
     "@types/prop-types": "^15.7.15",
     "@types/react": "~19.1.10",
-    "@types/react-dom": "^19.2.2",
-    "@types/react-native": "^0.72.8",
+    "@types/react-dom": "~19.1.7",
     "@types/scheduler": "^0.26.0",
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
@@ -93,20 +92,6 @@
     "npm": ">=8.0.0"
   },
   "expo": {
-    "install": {
-      "exclude": [
-        "react",
-        "react-dom",
-        "react-native",
-        "react-native-svg",
-        "expo",
-        "expo-file-system",
-        "react-native-gesture-handler",
-        "react-native-reanimated",
-        "react-native-screens",
-        "react-native-safe-area-context"
-      ]
-    },
     "doctor": {
       "reactNativeDirectoryCheck": {
         "exclude": [
