--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -18,41 +18,43 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/bottom-tabs": "^7.3.1",
-    "@react-navigation/native": "^7.1.3",
-    "@react-navigation/native-stack": "^7.3.1",
-    "@react-navigation/stack": "^7.1.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.3.12",
     "axios": "^1.7.7",
-    "expo": "^54.0.20",
-    "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.16",
-    "expo-document-picker": "~14.0.7",
-    "expo-file-system": "~19.0.17",
-    "expo-font": "~14.0.9",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
+    "expo": "~52.0.0",
+    "expo-constants": "~17.0.2",
+    "expo-dev-client": "~5.0.4",
+    "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.27.4",
     "lucide-react-native": "^0.400.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "~4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
-    "react-refresh": "^0.14.2"
+    "react-native-web": "~0.19.12",
+    "react-native-webview": "13.12.5",
+    "react-refresh": "^0.14.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -73,19 +75,15 @@
     "@types/istanbul-lib-coverage": "^2.0.6",
     "@types/istanbul-lib-report": "^3.0.3",
     "@types/istanbul-reports": "^3.0.4",
-    "@types/jest": "^29.5.14",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.9.1",
     "@types/prop-types": "^15.7.15",
-    "@types/react": "~19.1.10",
-    "@types/react-dom": "~19.1.7",
     "@types/scheduler": "^0.26.0",
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
-    "babel-preset-expo": "~54.0.0",
     "react-native-worklets": "^0.5.1",
-    "typescript": "~5.9.2"
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -94,10 +92,13 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": [
-          "react-native-razorpay"
-        ]
+        "enabled": false
       }
+    },
+    "install": {
+      "exclude": [
+        "react-native-razorpay"
+      ]
     }
   }
 }
