--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,8 @@
     "dev": "npx nodemon index.js",
     "vercel-build": "echo 'Build complete'",
     "postinstall": "echo 'Dependencies installed'",
-    "export-docs": "node scripts/export-swagger.js"
+    "export-docs": "node scripts/export-swagger.js",
+    "seed": "node scripts/seedData.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
