--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -82,6 +82,7 @@
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
+    "expo-build-properties": "^0.12.5",
     "react-native-worklets": "^0.5.1",
     "typescript": "^5.3.3"
   },
