--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -54,7 +54,8 @@
     "react-native-web": "~0.19.12",
     "react-native-webview": "13.12.5",
     "react-refresh": "^0.14.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "expo-build-properties": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -82,7 +83,6 @@
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
-    "expo-build-properties": "^0.12.5",
     "react-native-worklets": "^0.5.1",
     "typescript": "^5.3.3"
   },
