--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -27,6 +27,7 @@
     "@types/react": "~18.3.12",
     "axios": "^1.7.7",
     "expo": "~52.0.0",
+    "expo-build-properties": "^0.12.5",
     "expo-constants": "~17.0.2",
     "expo-dev-client": "~5.0.4",
     "expo-document-picker": "~13.0.3",
@@ -54,8 +55,7 @@
     "react-native-web": "~0.19.12",
     "react-native-webview": "13.12.5",
     "react-refresh": "^0.14.2",
-    "typescript": "^5.3.3",
-    "expo-build-properties": "^0.12.5"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
@@ -68,6 +68,8 @@
     "@react-native-community/cli": "^20.0.2",
     "@react-native/gradle-plugin": "0.76.5",
     "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.9.0",
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.28.0",
@@ -83,7 +85,10 @@
     "@types/stack-utils": "^2.0.3",
     "@types/yargs": "^17.0.33",
     "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "react-native-worklets": "^0.5.1",
+    "react-test-renderer": "^18.3.1",
     "typescript": "^5.3.3"
   },
   "engines": {
