update the Mobile Application with new features and improved the security of the application.

--- a/.gitignore
+++ b/.gitignore
@@ -266,4 +266,6 @@ Thumbs.db
 
 .vercel
 
-.vercel
+# Vercel configuration with secrets (if accidentally created)
+vercel.json.backup
+vercel.*.json
