--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -18,12 +18,14 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "@types/moment-timezone": "^0.5.13",
     "@types/react": "~18.3.12",
     "axios": "^1.7.7",
     "expo": "~52.0.0",
@@ -40,6 +42,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-updates": "~0.27.4",
     "lucide-react-native": "^0.400.0",
+    "moment-timezone": "^0.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
@@ -58,7 +61,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
+    "@babel/core": "^7.28.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
     "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/plugin-transform-private-methods": "^7.27.1",
@@ -67,28 +72,7 @@
     "@babel/runtime": "^7.28.4",
     "@react-native-community/cli": "^20.0.2",
     "@react-native/gradle-plugin": "0.76.5",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.9.0",
-    "@types/babel__generator": "^7.27.0",
-    "@types/babel__template": "^7.4.4",
-    "@types/babel__traverse": "^7.28.0",
-    "@types/graceful-fs": "^4.1.9",
-    "@types/hammerjs": "^2.0.46",
-    "@types/istanbul-lib-coverage": "^2.0.6",
-    "@types/istanbul-lib-report": "^3.0.3",
-    "@types/istanbul-reports": "^3.0.4",
-    "@types/json-schema": "^7.0.15",
-    "@types/node": "^24.9.1",
-    "@types/prop-types": "^15.7.15",
-    "@types/scheduler": "^0.26.0",
-    "@types/stack-utils": "^2.0.3",
-    "@types/yargs": "^17.0.33",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
-    "react-native-worklets": "^0.5.1",
-    "react-test-renderer": "^18.3.1",
+    "babel-preset-expo": "^54.0.7",
     "typescript": "^5.3.3"
   },
   "engines": {
