--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -58,9 +58,7 @@
     "react-native-web": "~0.19.12",
     "react-native-webview": "13.12.5",
     "react-refresh": "^0.14.2",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
+    "typescript": "^5.3.3",
     "@babel/core": "^7.28.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
@@ -70,10 +68,11 @@
     "@babel/plugin-transform-private-property-in-object": "^7.27.1",
     "@babel/preset-env": "^7.25.0",
     "@babel/runtime": "^7.28.4",
+    "babel-preset-expo": "^54.0.7"
+  },
+  "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
-    "@react-native/gradle-plugin": "0.76.5",
-    "babel-preset-expo": "^54.0.7",
-    "typescript": "^5.3.3"
+    "@react-native/gradle-plugin": "0.76.5"
   },
   "engines": {
     "node": ">=18.0.0",
