--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -18,6 +18,15 @@
     "submit:ios": "eas submit --platform ios --profile production"
   },
   "dependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@babel/preset-env": "^7.25.0",
+    "@babel/runtime": "^7.28.4",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "11.4.1",
@@ -28,6 +37,7 @@
     "@types/moment-timezone": "^0.5.13",
     "@types/react": "~18.3.12",
     "axios": "^1.7.7",
+    "babel-preset-expo": "^54.0.7",
     "expo": "~52.0.0",
     "expo-build-properties": "^0.12.5",
     "expo-constants": "~17.0.2",
@@ -58,21 +68,12 @@
     "react-native-web": "~0.19.12",
     "react-native-webview": "13.12.5",
     "react-refresh": "^0.14.2",
-    "typescript": "^5.3.3",
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2",
-    "@babel/plugin-transform-class-properties": "^7.27.1",
-    "@babel/plugin-transform-private-methods": "^7.27.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
-    "@babel/preset-env": "^7.25.0",
-    "@babel/runtime": "^7.28.4",
-    "babel-preset-expo": "^54.0.7"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@react-native-community/cli": "^20.0.2",
-    "@react-native/gradle-plugin": "0.76.5"
+    "@react-native/gradle-plugin": "0.76.5",
+    "@types/lodash": "^4.17.20"
   },
   "engines": {
     "node": ">=18.0.0",
