--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,23 +1,8 @@
 {
-<<<<<<< HEAD
-  "name": "mathematico-unified-backend",
-  "version": "2.0.0",
-  "description": "Unified Backend for Mathematico - Android Only",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "npx nodemon index.js",
-    "vercel-build": "echo 'Build complete'",
-    "postinstall": "echo 'Dependencies installed'",
-    "export-docs": "node scripts/export-swagger.js",
-    "seed": "node scripts/seedData.js"
-  },
-=======
   "name": "mathematico-backend",
   "version": "2.0.1",
   "description": "Backend API for Mathematico — optimized for Android and Web clients.",
   "main": "index.js",
-
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -26,8 +11,6 @@
     "export-docs": "node scripts/export-swagger.js",
     "test-api": "node -e \"require('./index.js'); console.log('✅ API loaded successfully');\""
   },
-
->>>>>>> origin/cursor/install-mathematico-project-dependencies-1686
   "dependencies": {
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -46,52 +29,23 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
-<<<<<<< HEAD
     "razorpay": "^2.9.6",
     "react-native-razorpay": "^2.3.0",
-=======
->>>>>>> origin/cursor/install-mathematico-project-dependencies-1686
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3",
-<<<<<<< HEAD
     "validator": "^13.15.15",
-=======
->>>>>>> origin/cursor/install-mathematico-project-dependencies-1686
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "xtend": "^4.0.2"
   },
-<<<<<<< HEAD
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": [
-    "mathematics",
-    "education",
-    "learning",
-    "api",
-    "backend",
-    "mobile",
-    "admin",
-    "android"
-  ],
-  "author": "Mathematico Team",
-  "license": "MIT",
-=======
-
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  },
-
-  "engines": {
-    "node": ">=18.0.0"
-  },
-
   "keywords": [
     "mathematico",
     "backend",
@@ -100,13 +54,14 @@
     "mongodb",
     "education",
     "learning",
-    "server"
+    "server",
+    "mathematics",
+    "mobile",
+    "admin",
+    "android"
   ],
-
   "author": "Mathematico Development Team",
   "license": "MIT",
-
->>>>>>> origin/cursor/install-mathematico-project-dependencies-1686
   "overrides": {
     "@rollup/rollup-linux-x64-gnu": "npm:rollup",
     "@rollup/rollup-linux-x64-musl": "npm:rollup",
