--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.22",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "expo-build-properties": "^1.0.10",
     "typescript": "^5.9.3"
   },
   "keywords": [
