--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -24,6 +24,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.1",
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/native-stack": "^7.3.1",
