--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -56,6 +56,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-refresh": "^0.14.2"
   },
   "devDependencies": {
