--- a/Frontend-app/package.json
+++ b/Frontend-app/package.json
@@ -24,37 +24,40 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^7.3.1",
-    "@react-navigation/native": "^7.1.3",
+    "@react-native-community/netinfo": "11.4.1",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.3.1",
-    "@react-navigation/stack": "^7.1.3",
-    "axios": "^1.7.7",
+    "@react-navigation/stack": "^7.6.13",
+    "axios": "^1.13.2",
     "expo": "~54.0.0",
-    "expo-constants": "~18.0.1",
-    "expo-dev-client": "~6.0.15",
-    "expo-document-picker": "~14.0.7",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.17",
-    "expo-font": "~14.0.9",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-secure-store": "~15.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
+    "expo-font": "~14.0.10",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
     "fs-extra": "^11.3.2",
     "lucide-react-native": "^0.454.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.1.2",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-refresh": "^0.14.2"
