--- a/Frontend-app/eas.json
+++ b/Frontend-app/eas.json
@@ -15,10 +15,7 @@
       }
     },
     "production": {
-      "distribution": "store",
-      "android": {
-        "track": "production"
-      }
+      "distribution": "store"
     }
   }
 }
